[package]
name = "mlauncher"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
ctrlc = { version = "3.4.7", features = ["termination"] }
netdev = "0.35.0"
regex = "1.11.1"
log = { version = "0.4.27", features = ["release_max_level_info"] }
env_logger = "0.11.8"
duct = "1.0.0"

[profile.release]
lto = true
strip = true
codegen-units = 1
panic = "abort"
opt-level = 3
