[package]
name = "mlauncher"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
ctrlc = { version = "3.5.0", features = ["termination"] }
netdev = "0.38.1"
regex = "1.12.1"
log = { version = "0.4.28", features = ["release_max_level_info"] }
env_logger = "0.11.8"
duct = "1.1.0"

[profile.release]
lto = true
strip = true
codegen-units = 1
panic = "abort"
opt-level = 3
